fixed spacing on navbar

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -55,7 +55,7 @@
     }
     
     .navbar h2 {
-        top: 0.5rem;
+        top: 1.5rem;
         left: 0;
         font-size: 4em;
         width: 100%;
